fixed flickering

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,10 +84,10 @@ body {
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid black;
+  border: 8px solid var(--text-color);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: black transparent transparent transparent;
+  border-color: var(--text-color) transparent transparent transparent;
 }
 .loading .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
